cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_336.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/b_sock.c:298: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/b_sock.c:298:5: Write of unused value
296.   int BIO_socket_nbio(int s, int mode)
297.   {
298.       int ret = -1;
           ^
299.       int l;
300.   
